most styling finished, grid fixed on small

--- a/frontend/src/components/ProductCard/ProductCard.css
+++ b/frontend/src/components/ProductCard/ProductCard.css
@@ -6,7 +6,7 @@
 	/* margin-bottom: 10px; */
 	/* border: 2px solid; */
 	/* text-align: center; */
-	aspect-ratio: auto 200 / 300;
+	/* aspect-ratio: auto 200 / 300; */
 }
 
 .image {
@@ -70,4 +70,3 @@ h3 {
 	font-size: 18px;
 	font-weight: 500;
 }
-
